2006-03-13  Vincent Untz  <vuntz@gnome.org>

	* configure.ac: post-release bump to 0.10.

==================== 0.9 ====================

2006-03-13  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README: Release 0.9.

2006-03-13  Runa Bhattacharjee <runa@bengalinux.org>

	* configure.ac: Added "bn" (Bengali) to ALL_LINGUAS.

2006-03-12  Ole Laursen  <olau@hardworking.dk>

	* configure.ac: Added "da" (Danish) to ALL_LINGUAS.

2006-03-11  Duarte Loreto <happyguy_pt@hotmail.com>

	* configure.ac: Added Portuguese (pt) to ALL_LINGUAS.

2006-03-08  Ahmad Riza H Nst  <rizahnst@id.gnome.org>

	* po/id.po: Added Indonesian Translation
	* configure.ac: Added "id" in to ALL_LINGUAS line.

2006-03-06  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.ac: Added "it" (Italian) to ALL_LINGUAS.

2006-03-03  Maxim Dziumanenko <mvd@mylinux.ua>

	* configure.ac: added 'uk' to ALL_LINGUAS

2006-02-27  Vincent Untz  <vuntz@gnome.org>

	* configure.ac: post-release bump to 0.9.

==================== 0.8 ====================

2006-02-27  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README: Release 0.8.

2006-02-24  Inaki Larranaga  <dooteo@euskalgnu.org>

	* configure.ac: added 'eu' to ALL_LINGUAS

2006-02-19  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>

	* configure.ac: added 'ca' to ALL_LINGUAS (this time for real =)

2006-02-16  Kang Jeong-Hee  <keizie@gmail.com>

        * configure.ac: add "ko" to ALL_LINGUAS.. 

2006-02-13  Vincent Untz  <vuntz@gnome.org>

	* configure.ac: post-release bump to 0.8.

==================== 0.7 ====================

2006-02-13  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README: Release 0.7.

2006-02-07  Kostas Papadimas  <pkst@gnome.org>

        * configure.ac: add "el" to ALL_LINGUAS.. 

2006-01-30  Hendrik Brandt  <heb@gnome-de.org>

	* configure.ac: add "de" to ALL_LINGUAS..

2006-01-29  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.ac: add "zh_TW" "zh_HK" to ALL_LINGUAS..
