@@ -29,6 +29,7 @@ def main (args):
     
     import gtk
     import gtk.glade
+    import gnome
 
     import maindialog
     import lockdownappliergconf
@@ -41,11 +42,13 @@ def main (args):
     gettext.install (config.PACKAGE, config.LOCALEDIR)
     gtk.glade.bindtextdomain (config.PACKAGE, config.LOCALEDIR)
 
+    prog = gnome.program_init (config.PACKAGE, config.VERSION)
+
     gtk.window_set_default_icon_name ("stock_lock")
 
     applier = lockdownappliergconf.PessulusLockdownApplierGconf ()
 
-    dialog = maindialog.PessulusMainDialog (applier)
+    dialog = maindialog.PessulusMainDialog (applier, gnome_program = prog)
 
     gtk.main ()
 
